syntax = "proto3";

package com.test.member.grpc;

option java_package = "com.test.member.grpc";
option java_outer_classname ="MemberProto";

service MemberService {
  rpc StreamCreateMember(stream MemberRequest) returns (stream MemberCreateResponse);

  // 단일 회원 ID로 조회
  rpc GetMemberById(MemberIdRequest) returns (MemberResponse);

  // 단일 회원 email로 조회
  rpc GetMemberByEmail(MemberEmailRequest) returns (MemberResponse);
}

message MemberRequest {
  int64 id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
  // 대용량 필드
  string profileImageBase64 = 5;
  string etcInfo = 6;
}

message MemberCreateResponse {
  int64 id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
  string profileImageBase64 = 5;
  string etcInfo = 6;
}

message MemberIdRequest {
  int64 id = 1;
}

message MemberEmailRequest {
  string email = 1;
}

message Address {
  string street = 1;
  string city = 2;
  string country = 3;
  string postalCode = 4;
  map<string, string> additionalInfo = 5;
}

message Contact {
  string phone = 1;
  string mobile = 2;
  string workPhone = 3;
  repeated string emails = 4;
  map<string, string> socialMedia = 5;
}

message MemberResponse {
  int64 id = 1;
  string email = 2;
  string name = 3;
  string profileImageBase64 = 4;
  Address address = 5;
  Contact contact = 6;
  repeated string interests = 7;
  repeated string skills = 8;
  string metadata = 9;
}